correction visibilité du seo local en CSS

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .local-seo {
-	visibility: hidden;
+	display: none;
 }
 
 .picture.left::before {
